allow building references from local fileset

--- a/params_default.example
+++ b/params_default.example
@@ -15,6 +15,7 @@ params {
     veupathdb_username = "user@example.com"
     veupathdb_password = "xxxxxxxxxxxxx"
     veupathdb_domain = 'https://vectorbase.org/vectorbase'
+    from_local = ""
 
     // PorthoMCL parameters
     porthomcl_threads = 4
