allow all-vs-all reference db

--- a/params_default.example
+++ b/params_default.example
@@ -23,5 +23,6 @@ params {
     // enable/disable parts of the pipeline
     do_augustus = true
     do_orthomcl = true
+    do_all_vs_all = false
 
 }
