--- a/params_default.example
+++ b/params_default.example
@@ -1,5 +1,7 @@
 params {
 
+    VERSION = 0.1
+
     // dependency paths
     AUGUSTUS_CONFIG_PATH    = "${HOME}/Augustus/config/"
     AUGUSTUS_SCRIPTS_PATH   = "${HOME}/Augustus/scripts/"
