remove use_reference processes from validation as no tree is required

--- a/params_companion.config
+++ b/params_companion.config
@@ -17,7 +17,7 @@ params {
     do_circos              = false
     do_pseudo              = true
     make_embl              = true
-    use_reference          = true
+    use_reference          = false
     fix_polycistrons       = false
     truncate_input_headers = true
     transfer_tool          = "ratt"
