prevent issues with docker user permissions

--- a/params_companion.config
+++ b/params_companion.config
@@ -22,7 +22,7 @@ params {
     truncate_input_headers = true
     transfer_tool          = "ratt"
     is_fungi               = false
-    use_existing           = false
+    use_existing           = true
     is_softmasked          = false
 
     // make submission-compatible EMBL files
